--- a/MercadeoDroid/res/values/strings.xml
+++ b/MercadeoDroid/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="text_material">Material</string>
     <string name="text_tienda">Tienda</string>
     <string name="text_precio">Precio</string>
+    <string name="text_boton">Capturar</string>
  </resources>
