--- a/MercadeoDroid/res/values/strings.xml
+++ b/MercadeoDroid/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="text_material">Material</string>
     <string name="text_tienda">Tienda</string>
     <string name="text_precio">Precio</string>
-	<string name="text_boton">Captura</string>
+	<string name="text_boton">Captura!</string>
  </resources>
